# AtomPPGen

./: .gitignore  CHANGELOG.md  README.md  assignment_3-2.tex  pyproject.toml
.github/workflows/: docs.yml
docs/: .gitignore
docs/source/: conf.py  index.rst  introduction.rst
docs/source/algorithm/: index.rst  kb_method.rst  potential_inversion.rst  tm_method.rst  validation_methods.rst
docs/source/api/: ae_atom.rst  export.rst  index.rst  invert.rst  kb.rst  tm.rst  validate.rst
docs/source/examples/: index.rst
docs/source/results/: al_lda_validation.rst  na_lda_validation.rst  si_lda_validation.rst
docs/source/tutorials/: 00-overview.ipynb  01-ae-foundation.ipynb  02-tm-pseudization.ipynb  03-potential-inversion.ipynb  04-kb-transform.ipynb  05-validation.ipynb  06-export-pp.ipynb  07-complete-example.ipynb  index.rst
docs/source/user_guide/: parameter_selection.rst  validation_standards.rst
examples/: export_al_example.py  validate_al_s_channel.py  validate_na_lda.py  validate_si_lda.py
src/atomppgen/: __init__.py  ae_atom.py  cli.py  export.py  invert.py  kb.py  tm.py  validate.py
tests/: test_ae_atom.py  test_export.py  test_invert.py  test_kb.py  test_tm.py  test_validate.py
